website/src/components/projects/ProjectStyles.css
.project-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin-left: 1vw;
  margin-right: 1vw;
  margin-top: 70vh;
}

.projects-header {
  display: block;
  position: relative;
  text-align: center;
  font-size: 2.1em;
  color: white;
  width: 100%;

}

.project-list {
  display: block;
  position: relative;
  width: 25%;
  list-style: none;
  color: white;
  padding: 2vh 2vw 5vh;
  overflow-y: scroll;
}

.project-items {
  text-align: center;
  background-color: rgb(31, 21, 52);
  border-radius: 25px;
  padding: 4vh 3.2vw 2vw 6vh;
}

.img {
  max-width: 100%;
  height: auto;
}

.project-items h1 {
  font-size: 1.5em;
}

.project-items p {
  font-size: 1.2em;
}

.project-items a {
  font-size: 1.2em;
  color: blue;
}

.project-items a:hover {
  color: white;
}

@media screen and (max-width: 901px) {
  .project-container {
    margin-top: 20vh;
  }
  
  .projects-header {
    font-size: 1.7em;
  }
  
  .project-items h1 {
    font-size: 1.7em;
  }

  .project-list {
    min-width: 80%;
  }

  .img {
    width: 80%;
    margin-top: 2vh;
  }

  .project-items {
    padding: 2vh 2vw 2vh 1vh;
  }
}

